// Chat Protocol Definitions
// Optimized for minimal payload size and fast parsing

syntax = "proto3";

package chat;

// Client-to-server messages
message ClientMessage {
  oneof payload {
    JoinRoom join = 1;
    LeaveRoom leave = 2;
    SendMessage send = 3;
    Ping ping = 4;
  }
}

// Join a chat room
message JoinRoom {
  string room_id = 1;
  string username = 2;
}

// Leave a chat room
message LeaveRoom {
  string room_id = 1;
}

// Send a chat message
message SendMessage {
  string room_id = 1;
  string content = 2;
}

// Keep-alive ping
message Ping {
  uint64 timestamp = 1;
}

// Server-to-client messages
message ServerMessage {
  oneof payload {
    ChatMessage chat = 1;
    UserJoined user_joined = 2;
    UserLeft user_left = 3;
    RoomInfo room_info = 4;
    Error error = 5;
    Pong pong = 6;
  }
}

// Chat message broadcast
message ChatMessage {
  string message_id = 1;
  string room_id = 2;
  string sender = 3;
  string content = 4;
  uint64 timestamp = 5;
}

// User joined notification
message UserJoined {
  string room_id = 1;
  string username = 2;
  uint64 timestamp = 3;
}

// User left notification
message UserLeft {
  string room_id = 1;
  string username = 2;
  uint64 timestamp = 3;
}

// Room information response
message RoomInfo {
  string room_id = 1;
  repeated string users = 2;
  uint32 user_count = 3;
}

// Error response
message Error {
  uint32 code = 1;
  string message = 2;
}

// Keep-alive pong
message Pong {
  uint64 timestamp = 1;
}
